# shadowtool

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  setup.py  test-config.toml
it_tests/: test_futu_connector.py
shadowtool/: __init__.py  __version__.py  config.py  constants.py  exceptions.py
shadowtool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shadowtool/configuration/: __init__.py  config_models.py  manager.py
shadowtool/connectors/: futu.py
shadowtool/database/: __init__.py  manager.py  models.py
shadowtool/interfaces/: base_connector.py  base_hook.py  connector.py  data_directory.py  hook.py  models.py  target.py
shadowtool/logging/: manage.py  manager.py
shadowtool/main/general/: file_utils.py  logging_utils.py  shell_utils.py
shadowtool/main/registra/: manager.py  models.py  parsers.py
shadowtool/main/vendors/: aws.py  microsoft_teams.py
shadowtool/models/: base.py
tests/: test_shadowtool.py
