[tool.poetry]
name = "shadowtool"
version = "0.1.2"
description = ""
authors = ["Shadowsong27 <syk950527@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "1.3"
click = "7.0"

[tool.poetry.dev-dependencies]
python = "^3.6"
sqlalchemy = "1.3"
click = "7.0"
bumpversion = "0.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
