[tool.poetry]
name = "shadowtool"
version = "0.0.0"
description = "A personal Python development library."
authors = ["Shadowsong27 <syk950527@gmail.com>"]
packages = [
    { include = "shadowtool" },
]


[tool.poetry.dependencies]
python = "^3.6.1"
click = "7.1.2"
psycopg2-binary = "^2.8.5"
boto3 = "1.17.93"
records = "^0.5.3"
jinja2 = "2.11.2"
bs4 = "^0.0.1"
requests = "2.23.0"
configobj = "^5.0.6"
awscli = "1.19.93"
pytest = "^6.1.1"
#geopandas = {version = "^0.8.1", optional = true}
#pyarrow = {version = "^3.0.0", optional = true}
#python-snappy = {version = "^0.5.4", optional = true}
#pandas = {version = "^1.1.5", optional = true}
#cached-property = "^1.5.2"
#sqlalchemy = "1.3.24"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
pre-commit = "2.3.0"

#[tool.poetry.extras]
#geo = ["geopandas"]
#pandas = ["pandas"]
#parquet = ["pyarrow", "python-snappy"]

[tool.poetry.scripts]
shadowtool = "shadowtool.bin.manage:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
